infrastructure/configs/traefik/external/dashboard-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-external
  namespace: traefik-public
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.clsn.dev`)
      services:
        - name: api@internal
          kind: TraefikService
